updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a Sinuhe Montero, a student of art, design and technology...</p>
+      <p>I am a Sinuhe Montero, a student of art, design and technology</p>
       <h1>Where I'm From</h1>
-      <p>New York City...</p>
+      <p>New York City</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>My favorite hobbies are painting, 3D modeling and my new favorite, coding...</p>
+      <p>My favorite hobbies are painting, 3D modeling and my new favorite, coding</p>
       <h1>What's your dream job?</h1>
-      <p>My dream job is to work in an enviornment where I can score some victory for humanity...</p>
+      <p>My dream job is to work in an enviornment where I can score some victory for humanity</p>
       <h1>Where do you live?</h1>
-      <p>I live in the heart of New York, Manhattan...</p>
+      <p>I live in the heart of New York, Manhattan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to be a web developer because I reference it with design and art. I can use it as a tool to express myself digitally...</p>
+      <p>I want to be a web developer because I reference it with design and art. I can use it as a tool to express myself digitally</p>
     </section>
 
     <footer id="footer">
